parser/parser_tests/tests_input/unit/bad/Bad42.ty
singleton class FunctionsAndActions { 
    
    functions: {
        someFunction: (f: get (x: Int) -> Int, g: get (x: Int) -> Bool) -> Bool = {
            if (something.g(5)) then something.f(5) else something.f(7)
        }
    }
}
